<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.paulo_000.atividadel.MainActivity">

    <Button
        android:id="@+id/button_toast"
        android:text="@string/toast"
        android:textColor="#FFFF"
        android:backgroundTint="#008B8B"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="mostrarToast"/>

    <TextView
        android:id="@+id/incremento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editText"
        android:text="@string/incremento"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_toast"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@+id/incremento"
        android:inputType="number"
         />

    <Button
        android:id="@+id/incrementar"
        android:text="@string/incrementar"
        android:background="#008B8B"
        android:textColor="#FFF"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:layout_below="@id/incremento"
        android:onClick="incrementar"/>

    <TextView
        android:id="@+id/numero"
        android:text="@string/numero"
        android:layout_marginTop="10dp"
        android:textSize="160sp"
        android:textStyle="bold"
        android:textColor="#008B8B"
        android:textAlignment="center"
        android:layout_below="@id/incrementar"
        android:layout_width="match_parent"
        android:background="#DC143C"
        android:layout_height="220sp" />

    <Button
        android:id="@+id/decremento"
        android:text="@string/decrementar"
        android:backgroundTint="#008B8B"
        android:textColor="#FFFF"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/numero"
        android:onClick="decrementar"
        />

</RelativeLayout>
